objects/ssot__FlowVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorDescriptionText__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorReason__c</fullName>
        <label>Error Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowId__c</fullName>
        <label>Flow</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowVersion_FlowId_map_Flow_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FlowVersion_FlowId_map_Flow_Id_N_1</label>
        <referenceTo>ssot__Flow__dlm</referenceTo>
        <relationshipLabel>FlowVersion_FlowId_map_Flow_Id_N_1</relationshipLabel>
        <relationshipName>FlowVersion_FlowId_map_Flow_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Flow Version Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledStartDateTime__c</fullName>
        <label>Scheduled Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>